@@ -31,15 +31,22 @@ package org.hisp.dhis.preheat;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 
+import com.google.common.collect.Lists;
 import jakarta.persistence.EntityManager;
+import jakarta.persistence.Query;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.beanutils.BeanUtils;
+import org.apache.commons.beanutils.PropertyUtils;
 import org.hibernate.jpa.QueryHints;
 import org.hisp.dhis.common.IdentifiableObject;
 import org.hisp.dhis.schema.Property;
@@ -55,6 +62,32 @@ import org.springframework.stereotype.Component;
 @Slf4j
 @Component
 public class SchemaToDataFetcher {
+
+  /**
+   * Threshold that controls both:
+   *
+   * <ol>
+   *   <li>when to switch from the OR'd single-query fast path to the per-property batched path
+   *       (when {@code totalValues > MAX_VALUES_PER_QUERY});
+   *   <li>the partition size used inside the batched path so each IN-clause stays under
+   *       PostgreSQL's hard cap of 65,535 bind parameters.
+   * </ol>
+   *
+   * <p>20,000 is conservative relative to the 65,535 cap and matches the partition size already
+   * used elsewhere in the preheat pipeline (see {@link DefaultPreheatService}).
+   *
+   * <p>Trade-off worth knowing before tuning this: the threshold is summed across <em>all</em>
+   * unique properties, so an import with e.g. 12k values for {@code code} + 10k for {@code name}
+   * (22k total, but neither IN-clause large on its own) falls into the batched path and runs as N
+   * separate queries instead of one OR'd query. For totals between 20k and 65k the previous code
+   * ran in a single query; the batched path will do more round-trips. Raising this constant or
+   * splitting the threshold from the partition size would recover that, but the current value is
+   * intentionally conservative to keep behaviour predictable across imports.
+   */
+  private static final int MAX_VALUES_PER_QUERY = 20_000;
+
+  private static final String HQL_FILTERED_TEMPLATE = "SELECT :fields from :entity WHERE :filter";
+
   private final EntityManager entityManager;
 
   public SchemaToDataFetcher(EntityManager entityManager) {
@@ -65,41 +98,182 @@ public class SchemaToDataFetcher {
 
   /**
    * Executes a read-only query for the given Schema class and fetches only the fields marked as
-   * "unique".
+   * "unique", filtered to only include records that have matching unique property values from the
+   * objects being imported.
+   *
+   * <p>This avoids loading ALL records when only checking uniqueness for specific values.
    *
    * @param schema a {@link Schema}
+   * @param objectsBeingImported the objects being imported, used to filter the query. If empty,
+   *     returns empty list (no uniqueness conflicts possible with nothing being imported).
    * @return a List of objects corresponding to the "klass" of the given Schema
    */
-  public List<? extends IdentifiableObject> fetch(Schema schema) {
+  public List<? extends IdentifiableObject> fetch(
+      Schema schema, Collection<? extends IdentifiableObject> objectsBeingImported) {
     if (schema == null) {
-      return Collections.emptyList();
+      return List.of();
     }
 
-    return mapUniqueFields(schema);
+    return mapUniqueFields(schema, objectsBeingImported);
   }
 
   @SuppressWarnings("unchecked")
-  private List<? extends IdentifiableObject> mapUniqueFields(Schema schema) {
+  private List<? extends IdentifiableObject> mapUniqueFields(
+      Schema schema, Collection<? extends IdentifiableObject> objectsBeingImported) {
     List<Property> uniqueProperties = schema.getUniqueProperties();
-
-    List objects = new ArrayList();
-
-    if (!uniqueProperties.isEmpty()) {
-      final String fields = extractUniqueFields(uniqueProperties);
-
-      objects =
-          entityManager
-              .createQuery("SELECT " + fields + " from " + schema.getKlass().getSimpleName())
-              .setHint(QueryHints.HINT_READONLY, true)
-              .getResultList();
+    if (uniqueProperties.isEmpty()) {
+      return List.of();
     }
 
-    // Hibernate returns a List containing an array of Objects if multiple
-    // columns are used in the query
-    // or a "simple" List if only one columns is used in the query
-    return uniqueProperties.size() == 1
-        ? handleSingleColumn(objects, uniqueProperties, schema)
-        : handleMultipleColumn(objects, uniqueProperties, schema);
+    if (objectsBeingImported.isEmpty()) {
+      return List.of();
+    }
+
+    Map<String, Set<Object>> valuesToCheck =
+        extractValuesToCheck(uniqueProperties, objectsBeingImported);
+
+    int totalValues = valuesToCheck.values().stream().mapToInt(Set::size).sum();
+    if (totalValues == 0) {
+      return List.of();
+    }
+
+    // Fast path: single query when under the parameter limit
+    if (totalValues <= MAX_VALUES_PER_QUERY) {
+      Query query = createQuery(schema, uniqueProperties, valuesToCheck);
+      if (query == null) {
+        return List.of();
+      }
+      List<Object> objects = query.getResultList();
+      return uniqueProperties.size() == 1
+          ? handleSingleColumn(objects, uniqueProperties, schema)
+          : handleMultipleColumn((List<Object[]>) (List<?>) objects, uniqueProperties, schema);
+    }
+
+    // Batched path: run one query per unique property, partitioning each property's values
+    // into chunks that stay under the parameter limit. Results are deduplicated because a row
+    // matching multiple unique properties can be returned by more than one query.
+    return runBatchedQueries(schema, uniqueProperties, valuesToCheck);
+  }
+
+  @SuppressWarnings("unchecked")
+  private List<? extends IdentifiableObject> runBatchedQueries(
+      Schema schema, List<Property> uniqueProperties, Map<String, Set<Object>> valuesToCheck) {
+    String fields = extractUniqueFields(uniqueProperties);
+    String entity = schema.getKlass().getSimpleName();
+    boolean singleColumn = uniqueProperties.size() == 1;
+
+    Set<Object> singleColumnResults = new LinkedHashSet<>();
+    Set<List<Object>> multiColumnResults = new LinkedHashSet<>();
+
+    for (Property property : uniqueProperties) {
+      Set<Object> values = valuesToCheck.get(property.getFieldName());
+      if (values == null || values.isEmpty()) {
+        continue;
+      }
+
+      String hql =
+          "SELECT %s FROM %s WHERE %s IN (:batch)"
+              .formatted(fields, entity, property.getFieldName());
+
+      for (List<Object> batch : Lists.partition(new ArrayList<>(values), MAX_VALUES_PER_QUERY)) {
+        Query query = entityManager.createQuery(hql).setHint(QueryHints.HINT_READONLY, true);
+        query.setParameter("batch", batch);
+        List<Object> rows = query.getResultList();
+        if (singleColumn) {
+          singleColumnResults.addAll(rows);
+        } else {
+          for (Object row : rows) {
+            multiColumnResults.add(Arrays.asList((Object[]) row));
+          }
+        }
+      }
+    }
+
+    if (singleColumn) {
+      return handleSingleColumn(new ArrayList<>(singleColumnResults), uniqueProperties, schema);
+    }
+    List<Object[]> dedupedRows = multiColumnResults.stream().map(List::toArray).toList();
+    return handleMultipleColumn(dedupedRows, uniqueProperties, schema);
+  }
+
+  private Query createQuery(
+      Schema schema, List<Property> uniqueProperties, Map<String, Set<Object>> valuesToCheck) {
+    String fields = extractUniqueFields(uniqueProperties);
+    String entity = schema.getKlass().getSimpleName();
+
+    String whereClause = buildWhereClause(uniqueProperties, valuesToCheck);
+    if (whereClause.isEmpty()) {
+      return null; // No unique property values - no conflicts possible
+    }
+
+    String hql =
+        HQL_FILTERED_TEMPLATE
+            .replace(":fields", fields)
+            .replace(":entity", entity)
+            .replace(":filter", whereClause);
+    Query query = entityManager.createQuery(hql).setHint(QueryHints.HINT_READONLY, true);
+    setQueryParameters(query, uniqueProperties, valuesToCheck);
+    return query;
+  }
+
+  private void setQueryParameters(
+      Query query, List<Property> uniqueProperties, Map<String, Set<Object>> valuesToCheck) {
+    for (Property property : uniqueProperties) {
+      String fieldName = property.getFieldName();
+      Set<Object> values = valuesToCheck.get(fieldName);
+      if (values != null && !values.isEmpty()) {
+        query.setParameter(fieldName + "Values", values);
+      }
+    }
+  }
+
+  /** Extracts the unique property values from the objects being imported. */
+  private Map<String, Set<Object>> extractValuesToCheck(
+      List<Property> uniqueProperties,
+      Collection<? extends IdentifiableObject> objectsBeingImported) {
+    Map<String, Set<Object>> valuesToCheck = new HashMap<>();
+
+    for (Property property : uniqueProperties) {
+      valuesToCheck.put(property.getFieldName(), new HashSet<>());
+    }
+
+    for (IdentifiableObject object : objectsBeingImported) {
+      for (Property property : uniqueProperties) {
+        try {
+          Object value = PropertyUtils.getProperty(object, property.getFieldName());
+          if (value != null) {
+            valuesToCheck.get(property.getFieldName()).add(value);
+          }
+        } catch (Exception e) {
+          log.debug(
+              "Could not extract property {} from object: {}",
+              property.getFieldName(),
+              e.getMessage());
+        }
+      }
+    }
+
+    return valuesToCheck;
+  }
+
+  /**
+   * Builds a WHERE clause that filters by the unique property values being imported. Returns empty
+   * string if no values to check.
+   */
+  private String buildWhereClause(
+      List<Property> uniqueProperties, Map<String, Set<Object>> valuesToCheck) {
+    List<String> conditions = new ArrayList<>();
+
+    for (Property property : uniqueProperties) {
+      String fieldName = property.getFieldName();
+      Set<Object> values = valuesToCheck.get(fieldName);
+      if (values != null && !values.isEmpty()) {
+        conditions.add(fieldName + " IN (:" + fieldName + "Values)");
+      }
+    }
+
+    // Use OR because we want to find ANY existing record that conflicts with ANY unique value
+    return String.join(" OR ", conditions);
   }
 
   private List<IdentifiableObject> handleMultipleColumn(
@@ -135,10 +309,11 @@ public class SchemaToDataFetcher {
   private void addToResult(
       Schema schema, Map<String, Object> valuesMap, List<IdentifiableObject> resultsObjects) {
     try {
-      IdentifiableObject identifiableObject = (IdentifiableObject) schema.getKlass().newInstance();
+      IdentifiableObject identifiableObject =
+          (IdentifiableObject) schema.getKlass().getDeclaredConstructor().newInstance();
       BeanUtils.populate(identifiableObject, valuesMap);
       resultsObjects.add(identifiableObject);
-    } catch (Exception e) {
+    } catch (ReflectiveOperationException e) {
       log.error(
           "Error during dynamic population of object type: " + schema.getKlass().getSimpleName(),
           e);
